        CHANGE - editor ignores attempts to rename nodes to have space in names
        CHANGE - editor snap function improved (snap to *nearest* point) (thanks Andreas Braun)
        ADDED - editor has option to show the snap grid
        ADDED - Cycle Maps can cycle all maps, or just the ones in a particular group (good for NOC displays)
        ADDED - New Cacti integration for editor. Additional 'edit maps' permission. No need for editor-config.php anymore!
        ADDED - per-map runtime logging
        ADDED - per-map debugging (debug a single map in Cacti without running debug logging for the whole poller)
	ADDED - Cacti template for monitoring Weathermap performance/mapcount/warningcount/memory.
        ADDED - when running from Cacti, HTMLOUTPUTFILE, IMAGEOUTPUTFILE and IMAGEURI can be used to create a second copy of the output.
	ADDED - KEYBGCOLOR and KEYOUTLINECOLOR both accept 'none'
	ADDED - Ability to disable any warning with 'SET nowarn_WMxxx 1'
        ADDED - USEICONSCALE works to colour artificial icons
        ADDED - performance options to disable additional information checks in rrd and dsstats data plugins.
        ADDED - cactihost and cactimonitor targets both return 5 for 'unknown' (according to Cacti) (thanks djnono17)
        ADDED - new DATAOUTPUTFILE allows collected data to be written to a file for later use (automatically on in Cacti)
        ADDED - new wmdata: datasource plugin can read data from files produced by DATAOUTPUTFILE
		
0.97a	FIXED - Incorrect action URL in 'map selector' combo box for Cacti users.
	FIXED - cacti_graph_id set to 0 instead of ID, by rrd/poller_output and dsstats plugins (thanks sh0x)
	FIXED - 'classic' legend drew 'hidden' colour values for things like key background colour. (thanks jmayniac)
	FIXED - PHP 5.3 deprecated code in HTML_Imagemap.class.php
	FIXED - 'Show Only First' option ignored in Cacti (thanks inko_nick)
	FIXED - Editor deals with overlapping nodes on different ZORDERS properly.